尝试修复跳转链接

--- a/docs/part1/01.md
+++ b/docs/part1/01.md
@@ -4,10 +4,10 @@
 
 **此外，在阅读本章内容之前，你还需要先浏览下面这些内容**：
 
-| 章节                                       |
-| ------------------------------------------ |
-| [ComPtr智能指针](../misc/ComPtr.md)        |
-| [HR宏关于dxerr库的替代方案](../misc/HR.md) |
+| 章节                                    |
+| --------------------------------------- |
+| [ComPtr智能指针](misc/ComPtr.md)        |
+| [HR宏关于dxerr库的替代方案](misc/HR.md) |
 
 这一章内容大部分属于龙书的内容，但仍有一些不同的地方，这些是跟龙书有差异的部分：
 
