--- a/docs/part1/02.md
+++ b/docs/part1/02.md
@@ -4,10 +4,10 @@
 
 **在阅读本章内容之前，你还需要先浏览下面的章节**：
 
-| 章节                                           |
-| ---------------------------------------------- |
-| [HLSL语法入门](../misc/HLSL.md)                |
-| [HLSL编译着色器的三种方法](../misc/Compile.md) |
+| 章节                                        |
+| ------------------------------------------- |
+| [HLSL语法入门](misc/HLSL.md)                |
+| [HLSL编译着色器的三种方法](misc/Compile.md) |
 
 
 
