--- a/docs/part1/07.md
+++ b/docs/part1/07.md
@@ -2,9 +2,9 @@
 
 这一章项目涉及到的内容非常多，在学习之前你还需要了解下面内容：
 
-| 章节内容                                             |
-| ---------------------------------------------------- |
-| [深入理解HLSL常量缓冲区打包规则](../misc/Packing.md) |
+| 章节内容                                          |
+| ------------------------------------------------- |
+| [深入理解HLSL常量缓冲区打包规则](misc/Packing.md) |
 
 学习目标：
 
