--- a/docs/part2/13.md
+++ b/docs/part2/13.md
@@ -5,14 +5,14 @@
 
 在未来的版本中，D3DCompiler可能会停止对FX11的支持，所以我们需要自行去管理各种特效，并改用HLSL编译器去编译每一个着色器。同时，在阅读本章之前，你需要先学习本系列前面的一些重点章节再继续：
 
-| 章节目录                                              |
-| ----------------------------------------------------- |
-| [01 DirectX11初始化](../part1/01.md)                  |
-| [02 顶点/像素着色器的创建、顶点缓冲区](./part1/02.md) |
-| [03 索引缓冲区、常量缓冲区](./part1/03.md)            |
-| [09 纹理映射与采样器状态](./part1/09.md)              |
-| [11 混合状态与光栅化状态](11.md)                      |
-| [12 深度/模板状态、反射绘制](12.md)                   |
+| 章节目录                                            |
+| --------------------------------------------------- |
+| [01 DirectX11初始化](part1/01.md)                   |
+| [02 顶点/像素着色器的创建、顶点缓冲区](part1/02.md) |
+| [03 索引缓冲区、常量缓冲区](part1/03.md)            |
+| [09 纹理映射与采样器状态](part1/09.md)              |
+| [11 混合状态与光栅化状态](part2/11.md)              |
+| [12 深度/模板状态、反射绘制](part2/12.md)           |
 
 
 在DirectXTK中的`Effects.h`可以看到它实现了一系列Effects管理类，相比`Effects11`框架库，它缺少了反射机制，并且使用的是它内部已经写好、编译好的着色器。DirectXTK的Effects也只不过是为了简化游戏开发流程而设计出来的。当然，里面的一部分源码实现也值得我们去学习。
