--- a/docs/part2/16.md
+++ b/docs/part2/16.md
@@ -6,9 +6,9 @@
 
 在此之前需要额外了解的章节如下：
 
-| 章节回顾                   |
-| -------------------------- |
-| [15 几何着色器初探](15.md) |
+| 章节回顾                         |
+| -------------------------------- |
+| [15 几何着色器初探](part2/15.md) |
 
 # 流输出阶段
 
