--- a/docs/part2/17.md
+++ b/docs/part2/17.md
@@ -12,8 +12,8 @@
 
 | 章节回顾                                                     |
 | ------------------------------------------------------------ |
-| [深入理解与使用2D纹理资源(重点阅读纹理数组)](../misc/Texture2D.md) |
-| [15 几何着色器初探](15.md)                                   |
+| [深入理解与使用2D纹理资源(重点阅读纹理数组)](misc/Texture2D.md) |
+| [15 几何着色器初探](part2/15.md)                             |
 
 # 实现雾效
 
