--- a/docs/part2/20.md
+++ b/docs/part2/20.md
@@ -6,8 +6,8 @@
 
 | 章节回顾                                                     |
 | ------------------------------------------------------------ |
-| [18 使用DirectXCollision库进行碰撞检测](18.md)               |
-| [19 模型加载：obj格式的读取及使用二进制文件提升读取效率](19.md) |
+| [18 使用DirectXCollision库进行碰撞检测](part2/18.md)         |
+| [19 模型加载：obj格式的读取及使用二进制文件提升读取效率](part2/19.md) |
 
 # 硬件实例化(Hardware Instancing)
 
