--- a/docs/part2/21.md
+++ b/docs/part2/21.md
@@ -6,12 +6,12 @@
 
 在阅读本章之前，先要了解下面的内容：
 
-| 章节                                           |
-| ---------------------------------------------- |
-| [05 键盘和鼠标输入](../part1/05.md)            |
-| [06 DirectXMath数学库](../part1/06.md)         |
-| [10 摄像机类](../part1/10.md)                  |
-| [18 使用DirectXCollision库进行碰撞检测](18.md) |
+| 章节                                                 |
+| ---------------------------------------------------- |
+| [05 键盘和鼠标输入](part1/05.md)                     |
+| [06 DirectXMath数学库](part1/06.md)                  |
+| [10 摄像机类](part1/10.md)                           |
+| [18 使用DirectXCollision库进行碰撞检测](part2/18.md) |
 
 # 核心思想
 
