--- a/docs/part2/23.md
+++ b/docs/part2/23.md
@@ -4,9 +4,9 @@
 
 **没了解过静态天空盒的读者请先移步到下面的链接**：
 
-| 章节回顾                                       |
-| ---------------------------------------------- |
-| [22 立方体映射：静态天空盒的读取与实现](22.md) |
+| 章节回顾                                             |
+| ---------------------------------------------------- |
+| [22 立方体映射：静态天空盒的读取与实现](part2/22.md) |
 
 # 动态天空盒
 
