--- a/docs/part2/24.md
+++ b/docs/part2/24.md
@@ -5,7 +5,7 @@
 
 | 章节回顾                                                     |
 | ------------------------------------------------------------ |
-| [深入理解与使用2D纹理资源(重点阅读ScreenGrab库)](../misc/Texture2D.md) |
+| [深入理解与使用2D纹理资源(重点阅读ScreenGrab库)](misc/Texture2D.md) |
 
 # 再述Render-To-Texture技术
 
