--- a/docs/part3/27.md
+++ b/docs/part3/27.md
@@ -4,8 +4,8 @@
 
 | 章节                                                         |
 | ------------------------------------------------------------ |
-| [26 计算着色器：入门](26.md)                                 |
-| [深入理解与使用缓冲区资源(结构化缓冲区/有类型缓冲区)](../misc/Buffer.md) |
+| [26 计算着色器：入门](part3/26.md)                           |
+| [深入理解与使用缓冲区资源(结构化缓冲区/有类型缓冲区)](misc/Buffer.md) |
 
 这一章我们继续用一个计算着色器的应用实例作为切入点，进一步了解相关知识。
 
