--- a/docs/part3/28.md
+++ b/docs/part3/28.md
@@ -4,12 +4,12 @@
 
 本章演示项目还用到了其他的一些效果，在学习本章之前建议先了解如下内容：
 
-| 章节内容                                                     |
-| ------------------------------------------------------------ |
-| [11 混合状态](../part2/11.md)                                |
-| [17 利用几何着色器实现公告板效果（雾效部分）](../part2/17.md) |
-| [26 计算着色器：入门](26.md)                                 |
-| [27 计算着色器：双调排序（非双调排序部分）](27.md)           |
+| 章节内容                                                   |
+| ---------------------------------------------------------- |
+| [11 混合状态](part2/11.md)                                 |
+| [17 利用几何着色器实现公告板效果（雾效部分）](part2/17.md) |
+| [26 计算着色器：入门](part3/26.md)                         |
+| [27 计算着色器：双调排序（非双调排序部分）](part3/27.md)   |
 
 **学习目标**：
 
@@ -292,10 +292,10 @@ $$
 
 
 $$
-\begin{equation} \begin{split}
+\begin{aligned} \begin{split}
 \frac{\partial}{\partial x}z(i,j,k) &= \frac{\frac{z(i,j,k)-z(i-1,j,k)}{d}+\frac{z(i+1,j,k)-z(i,j,k)}{d}}{2} \\
 &=\frac{z(i+1,j,k)-z(i-1,j,k)}{2d} \\
-\end{split} \end{equation} \tag{28.15}
+\end{split} \end{aligned} \tag{28.15}
 $$
 ![](..\assets\28\10.png)
 
@@ -309,17 +309,17 @@ $$
 $$
 二阶偏导也可以使用和一阶偏导相同的方法来计算。假如我们已经计算出了顶点`[i-1][j]`和`[i+1][j]`的偏移z对x的一阶偏导数，那么我们就可以得到两者平均差值：
 $$
-\begin{equation} \begin{split}
+\begin{aligned} \begin{split}
 \Delta[\frac{\partial}{\partial x}z(i,j,k)] &= \frac{\frac{\partial}{\partial x}z(i+1,j,k)-\frac{\partial}{\partial x}z(i,j,k)}{2} + \frac{\frac{\partial}{\partial x}z(i,j,k)-\frac{\partial}{\partial x}z(i-1,j,k)}{2} \\
 &=\frac{\frac{\partial}{\partial x}z(i+1,j,k)-\frac{\partial}{\partial x}z(i-1,j,k)}{2} \\
-\end{split} \end{equation} \tag{28.18}
+\end{split} \end{aligned} \tag{28.18}
 $$
 将方程(28.15)带入上式，可以得到：
 $$
-\begin{equation} \begin{split}
+\begin{aligned} \begin{split}
 \Delta[\frac{\partial}{\partial x}z(i,j,k)] &= \frac{\frac{z(i+2,j,k)-z(i,j,k)}{2d} - \frac{z(i,j,k)-z(i-2,j,k)}{2d}}{2} \\
 &=\frac{z(i+2,j,k)-2z(i,j,k)+z(i-2,j,k)}{4d} \\
-\end{split} \end{equation} \tag{28.19}
+\end{split} \end{aligned} \tag{28.19}
 $$
 除以d使得我们可以得到$\Delta(\frac{\partial z}{\partial x})/\Delta x$，对应二阶偏导：
 $$
@@ -358,10 +358,10 @@ $$
 
 假定我们拥有一个n×m顶点数组(其任意$z(i,j,0)=0$和$z(i,j,1)=0$)，现在让某处顶点被抬高使得$z(i_0, j_0, 0)=h$和$z(i_0, j_0, 1)=h$，h是一个非0位移值。若该处顶点被释放了2t时间，此时式子(28.25)中第三个加法部分的值为0，故有：
 $$
-\begin{equation} \begin{split}
+\begin{aligned} \begin{split}
 z(i,j,2)&=\frac{4-8c^2t^2/d^2}{\mu t+2}z(i,j,1)+\frac{\mu t-2}{\mu t+2}z(i,j,0)\\
 &=\frac{2-8c^2t^2/d^2+\mu t}{\mu t+2}h
-\end{split} \end{equation} \tag{28.26}
+\end{split} \end{aligned} \tag{28.26}
 $$
 为了让顶点向周围平坦的水面移动，它在2t时刻的位移必须要比在t时刻的更小一些。因此就有：
 $$
@@ -407,7 +407,7 @@ $$
 $$
 经过叉乘后可以得到未经标准化的法向量：
 $$
-\begin{equation} \begin{split}
+\begin{aligned} \begin{split}
 \mathbf{N} &= \mathbf{T}\times\mathbf{B} \\
 &=\begin{vmatrix}
 \mathbf{i} & \mathbf{j} & \mathbf{k} \\
@@ -415,7 +415,7 @@ $$
 0 & 1 & \frac{z(i,j+1,k)-z(i,j-1,k)}{2d} \\
 \end{vmatrix} \\
 &= (-\frac{z(i+1,j,k)-z(i-1,j,k)}{2d},-\frac{z(i,j+1,k)-z(i,j-1,k)}{2d}, 1)
-\end{split} \end{equation} \tag{28.35}
+\end{split} \end{aligned} \tag{28.35}
 $$
 对上述向量乘上2d的倍数并不会改变它的方向，但可以消除除法：
 $$
