--- a/docs/part3/29.md
+++ b/docs/part3/29.md
@@ -6,12 +6,12 @@
 
 | 章节内容                                                     |
 | ------------------------------------------------------------ |
-| [11 混合状态](../part2/11.md)                                |
-| [12 深度/模板状态、平面镜反射绘制（仅深度/模板状态）](../part2/12.md) |
-| [14 深度测试](../part2/14.md)                                |
-| [24 Render-To-Texture(RTT)技术的应用](../part2/24.md)        |
-| [28 计算着色器：波浪(水波)](28.md)                           |
-| [深入理解与使用缓冲区资源（结构化缓冲区、字节地址缓冲区）](../misc/Buffer.md) |
+| [11 混合状态](part2/11.md)                                   |
+| [12 深度/模板状态、平面镜反射绘制（仅深度/模板状态）](part2/12.md) |
+| [14 深度测试](part2/14.md)                                   |
+| [24 Render-To-Texture(RTT)技术的应用](part2/24.md)           |
+| [28 计算着色器：波浪(水波)](part2/28.md)                     |
+| [深入理解与使用缓冲区资源（结构化缓冲区、字节地址缓冲区）](misc/Buffer.md) |
 
 **学习目标：**
 
