--- a/docs/part3/31.md
+++ b/docs/part3/31.md
@@ -6,7 +6,7 @@
 
 | 章节                                                         |
 | ------------------------------------------------------------ |
-| [深入理解Effects11、使用着色器反射机制(Shader Reflection)实现一个复杂Effects框架](../misc/Effects.md) |
+| [深入理解Effects11、使用着色器反射机制(Shader Reflection)实现一个复杂Effects框架](misc/Effects.md) |
 
 **学习目标：**
 
