--- a/docs/part3/34.md
+++ b/docs/part3/34.md
@@ -4,10 +4,10 @@
 
 在此之前你需要了解如下章节：
 
-| 章节                                   |
-| -------------------------------------- |
-| [25 法线贴图](../part2/25.md)          |
-| [33 曲面细分阶段(Tessellation)](33.md) |
+| 章节                                         |
+| -------------------------------------------- |
+| [25 法线贴图](part2/25.md)                   |
+| [33 曲面细分阶段(Tessellation)](part3/33.md) |
 
 **学习目标：**
 
