--- a/docs/part3/35.md
+++ b/docs/part3/35.md
@@ -4,12 +4,12 @@
 
 在这一章开始之前，你需要先学过如下章节：
 
-| 章节                                              |
-| ------------------------------------------------- |
-| [11 混合状态](../part2/11.md)                     |
-| [15 几何着色器初探](../part2/15.md)               |
-| [16 流输出阶段](../part2/16.md)                   |
-| [17 利用几何着色器实现公告板效果](../part2/17.md) |
+| 章节                                           |
+| ---------------------------------------------- |
+| [11 混合状态](part2/11.md)                     |
+| [15 几何着色器初探](part2/15.md)               |
+| [16 流输出阶段](part2/16.md)                   |
+| [17 利用几何着色器实现公告板效果](part2/17.md) |
 
 **学习目标**：
 
