--- a/docs/part1/03.md
+++ b/docs/part1/03.md
@@ -8,8 +8,8 @@
 
 | 章节                                                |
 | --------------------------------------------------- |
-| [02 顶点/像素着色器的创建、顶点缓冲区](02.md)       |
-| [HLSL中矩阵的内存布局和mul函数探讨](../misc/Mul.md) |
+| [02 顶点/像素着色器的创建、顶点缓冲区](part1/02.md) |
+| [HLSL中矩阵的内存布局和mul函数探讨](misc/Mul.md)    |
 
 当然，我也建议你及早开始了解并上手RenderDoc图形调试器，以帮助寻找在CPU调试时无法察觉到的问题：
 
