--- a/docs/part2/14.md
+++ b/docs/part2/14.md
@@ -5,11 +5,11 @@
 在此之前需要额外了解的章节如下：
 
 
-| 章节回顾                                              |
-| ----------------------------------------------------- |
-| [11 混合状态与光栅化状态](11.md)                      |
-| [12 深度/模板状态、反射绘制](12.md)                   |
-| [13 动手实现一个简易Effects框架、阴影效果绘制](13.md) |
+| 章节回顾                                                    |
+| ----------------------------------------------------------- |
+| [11 混合状态与光栅化状态](part2/11.md)                      |
+| [12 深度/模板状态、反射绘制](part2/12.md)                   |
+| [13 动手实现一个简易Effects框架、阴影效果绘制](part2/13.md) |
 
 # 交换律
 
