--- a/docs/part2/22.md
+++ b/docs/part2/22.md
@@ -13,7 +13,7 @@
 
 | 章节回顾                                                     |
 | ------------------------------------------------------------ |
-| [深入理解与使用2D纹理资源(重点了解纹理子资源、纹理数组和纹理天空盒)](../misc/Texture2D.md) |
+| [深入理解与使用2D纹理资源(重点了解纹理子资源、纹理数组和纹理天空盒)](misc/Texture2D.md) |
 
 # 立方体映射(Cube Mapping)
 
