公式修正 HLSL修正

--- a/docs/part1/02.md
+++ b/docs/part1/02.md
@@ -66,7 +66,7 @@
 
 在里面创建一个`Triangle.hlsli`的文件，内容如下：
 
-   ```cpp
+   ```hlsl
    // Triangle.hlsli
    
    struct VertexIn
@@ -85,7 +85,7 @@
 
 接下来创建`Triangle_VS.hlsl`文件，用于存放顶点着色器代码：
 
-   ```cpp
+   ```hlsl
    #include "Triangle.hlsli"
    
    // 顶点着色器
@@ -100,7 +100,7 @@
 
 最后创建`Triangle_PS.hlsl`文件，用于存放像素着色器代码：
 
-   ```cpp
+   ```hlsl
    #include "Triangle.hlsli"
    
    // 像素着色器
@@ -134,7 +134,7 @@
 
    在HLSL中，用于输入的结构体为：
 
-   ```cpp
+   ```hlsl
    struct VertexIn
    {
        float3 pos : POSITION;
