--- a/docs/part3/26.md
+++ b/docs/part3/26.md
@@ -124,7 +124,7 @@ void CS( uint3 DTid : SV_DispatchThreadID )
 
 从上表可以得知DXGI_FORMAT枚举值的后缀要和HLSL的类型对应(浮点型对应浮点型，整型对应整型，规格化浮点型对应规格化浮点型)，否则可能会引发下面的错误(这里举`DXGI_FORMAT`为`unorm`，`HLSL`类型为`float`的例子)：
 
-> D3D11 ERROR: ID3D11DeviceContext::Dispatch: The resource return type for component 0 declared in the shader code (FLOAT) is not compatible with the resource type bound to Unordered Access View slot 0 of the Compute Shader unit (UNORM). This mismatch is invalid if the shader actually uses the view (e.g. it is not skipped due to shader code branching). [ EXECUTION ERROR #2097372: DEVICE_UNORDEREDACCESSVIEW_RETURN_TYPE_MISMATCH]
+> D3D11 ERROR: `ID3D11DeviceContext::Dispatch`: The resource return type for component 0 declared in the shader code (FLOAT) is not compatible with the resource type bound to Unordered Access View slot 0 of the Compute Shader unit (UNORM). This mismatch is invalid if the shader actually uses the view (e.g. it is not skipped due to shader code branching). [ EXECUTION ERROR #2097372: DEVICE_UNORDEREDACCESSVIEW_RETURN_TYPE_MISMATCH]
 
 由于`DXGI_FORMAT`的部分格式比较紧凑，HLSL中能表示的最小类型通常又比较大。比如`DXGI_FORMAT_R16G16B16A16_FLOAT`和`float4`，个人猜测HLSL的类型为了能传递给DXGI_FORMAT，允许做丢失精度的同类型转换。
 
