完成初步校对

--- a/docs/part2/16.md
+++ b/docs/part2/16.md
@@ -202,7 +202,7 @@ HR(device->CreateGeometryShaderWithStreamOutput(blob->GetBufferPointer(), blob->
 
 首先给出`Basic.hlsli`文件的内容，要注意里面的常量缓冲区和之前有所变化:
 
-```cpp
+```hlsl
 #include "LightHelper.hlsli"
 
 cbuffer CBChangesEveryFrame : register(b0)
@@ -1236,5 +1236,4 @@ void GameApp::DrawScene()
 下面是带法向量的：
 
 ![](..\assets\16\10.gif)
-
 
