--- a/docs/part2/24.md
+++ b/docs/part2/24.md
@@ -446,7 +446,7 @@ void GameApp::OnResize()
 
 首先是`Minimap.hlsli`：
 
-```cpp
+```hlsl
 // Minimap.hlsli
 
 Texture2D g_Tex : register(t0);
@@ -485,7 +485,7 @@ struct VertexPosHTex
 
 然后是顶点着色器和像素着色器的实现：
 
-```cpp
+```hlsl
 // Minimap_VS.hlsl
 #include "Minimap.hlsli"
 
@@ -499,7 +499,7 @@ VertexPosHTex VS(VertexPosTex vIn)
 }
 ```
 
-```cpp
+```hlsl
 // Minimap_PS.hlsl
 #include "Minimap.hlsli"
 
