--- a/docs/part1/01.md
+++ b/docs/part1/01.md
@@ -143,9 +143,9 @@ MainWndProc(HWND hwnd, UINT msg, WPARAM wParam, LPARAM lParam)
 
 Direct3D初始化阶段首先需要创建**D3D设备**和**D3D设备上下文**
 
-**D3D设备（`ID3D11Device`）**通常代表一个显示适配器（即显卡），它最主要的功能是用于创建各种所需资源，最常用的资源有：**资源类（ID3D11Resource, 包含纹理和缓冲区）**，**视图类**以及**着色器**。此外，D3D设备还能够用于检测系统环境对功能的支持情况。
+**D3D设备**（`ID3D11Device`）通常代表一个显示适配器（即显卡），它最主要的功能是用于创建各种所需资源，最常用的资源有：**资源类（ID3D11Resource, 包含纹理和缓冲区）**，**视图类**以及**着色器**。此外，D3D设备还能够用于检测系统环境对功能的支持情况。
 
-**D3D设备上下文(`ID3D11DeviceContext`)**可以看做是一个渲染管线。通常我们在创建D3D设备的同时也会附赠一个**立即设备上下文**(Immediate Context)。一个D3D设备仅对应一个D3D立即设备上下文，并且只要我们拥有其中一方，就能通过各自的方法获取另一方（即`ID3D11Device::GetImmediateContext`和`ID3D11DeviceContext::GetDevice`）。渲染管线主要负责渲染和计算工作，它需要绑定来自与它关联的D3D设备所创建的各种资源、视图和着色器才能正常运转，除此之外，它还能够负责对资源的直接读写操作。
+**D3D设备上下文**(`ID3D11DeviceContext`)可以看做是一个渲染管线。通常我们在创建D3D设备的同时也会附赠一个**立即设备上下文**(Immediate Context)。一个D3D设备仅对应一个D3D立即设备上下文，并且只要我们拥有其中一方，就能通过各自的方法获取另一方（即`ID3D11Device::GetImmediateContext`和`ID3D11DeviceContext::GetDevice`）。渲染管线主要负责渲染和计算工作，它需要绑定来自与它关联的D3D设备所创建的各种资源、视图和着色器才能正常运转，除此之外，它还能够负责对资源的直接读写操作。
 
 如果你的系统支持Direct3D 11.1的话，则对应的接口类为：`ID3D11Device1`、`ID3D11DeviceContext1`，它们分别继承自上面的两个接口类，区别在于额外提供了少数新的接口，并且接口方法的实现可能会有所区别。
 
