--- a/docs/part1/03.md
+++ b/docs/part1/03.md
@@ -13,9 +13,9 @@
 
 当然，我也建议你及早开始了解并上手RenderDoc图形调试器，以帮助寻找在CPU调试时无法察觉到的问题：
 
-| 章节        |
-| ----------- |
-| 有待填坑... |
+| 章节                                   |
+| -------------------------------------- |
+| [RenderDoc图形调试](misc/RenderDoc.md) |
 
 **学习目标**：
 
