--- a/docs/prepare/01.md
+++ b/docs/prepare/01.md
@@ -49,12 +49,15 @@ Assimp
 
 ![](../assets/How-To-Build-Assimp/006.png)
 
-然后是动态库，一般有两种处理方式：
+然后是动态库，一般有四种处理方式：
 
-- 将`assimp-vc14*-mt.dll`和`assimp-vc14*-mtd.dll`复制到你项目路径中(`*.vcxproj`所在位置)
-- 添加调试环境，选择调试 → 环境，添加`PATH=C:\Program Files (x86)\Assimp\bin`，这样程序运行的时候就会额外在该路径寻找动态库了
+- 将`assimp-vc14*-mt.dll`和`assimp-vc14*-mtd.dll`复制到你项目路径中(`*.vcxproj`所在位置)。在将你的程序打包给别人使用的时候需要选择这种方式，但自己有多个项目的话都复制一份dll显然是不合适的。
+- 添加调试环境，选择调试 → 环境，添加`PATH=C:\Program Files (x86)\Assimp\bin`，这样程序运行的时候就会额外在该路径寻找动态库了，但每个使用Assimp的项目都需要进行这样的设置，其属性保存在`*.vcxproj.user`中
 
 ![](../assets/How-To-Build-Assimp/007.png)
+
+- 将`assimp-vc14*-mt.dll`和`assimp-vc14*-mtd.dll`复制到`C:Windows\System32`中，这是寻找动态库的默认路径之一，也属于一劳永逸的办法
+- 还有一种一劳永逸的办法就是修改环境变量`PATH`，去开始菜单-设置-关于-高级系统设置-高级-环境变量-系统变量 中找到`PATH`，然后新建一个路径`C:\Program Files (x86)\Assimp\bin`保存即可
 
 到此Assimp的配置就结束了。
 
