--- a/docs/part3/38.md
+++ b/docs/part3/38.md
@@ -274,8 +274,8 @@ cbuffer CBCascadedShadow : register(b2)
 	float4 g_CascadeFrustumsEyeSpaceDepthsFloat[2]; // 不同子视锥体远平面的Z值，将级联分开
 	// 对Map-based Selection方案，这将保持有效范围内的像素。
     // 当没有边界时，Min和Max分别为0和1
-    float  g_MinBorderPadding;      // 1 / SIZE
-    float  g_MaxBorderPadding;      // 1 - 1 / SIZE
+    float  g_MinBorderPadding;      // (kernelSize / 2) / (float)shadowSize
+    float  g_MaxBorderPadding;      // 1.0f - (kernelSize / 2) / (float)shadowSize
 }
 
 // Map-Based Selection
